<resources>
    <string name="app_name">MemBot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pi_game">Pi Game</string>
    <string name="safe_cracker_game">Safe Cracker Game</string>
    <string name="user_input_layout">Enter Pi Game</string>
    <string name="submit_button">Go</string>
    <string name="scoreboard">SCOREBOARD</string>
    <string name="score_label">SCORE </string>
    <string name="highest_score_label">HIGHEST SCORE</string>
    <string name="user_score">3</string>
    <string name="strikes_label">STRIKES </string>
    <string name="user_strikes">3</string>
    <string name="user_score_safe">0</string>
    <string name="user_strikes_safe">0</string>
    <string name="user_score_music">3</string>
    <string name="user_strikes_music">0</string>
    <string name="circle">Circle</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="go">GO</string>
    <string name="quit_button">QUIT</string>
    <string name="retry_button">RETRY</string>
    <string name="music_game">Music Game</string>
    <string name="music_button_1">1</string>
    <string name="music_button_2">2</string>
    <string name="music_button_3">3</string>
    <string name="music_button_4">4</string>
    <string name="pi_number_3">3.</string>
    <string name="user_profile">User Profile</string>
    <string name="edit_text_user_name">Anne Shirley</string>
    <string name="sound">Sound</string>
    <string name="name_label">Name</string>
    <string name="volume">Volume</string>
    <string name="edit_text_email">anne.shirley@gmail.com</string>
    <string name="edit_text_password">ANNEshirley000</string>
    <string name="edit">edit</string>
    <string name="create">create</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="chimp_game">Chimp Game</string>
    <string name="speed_score_heading">Speed</string>
    <string name="accuracy_score_heading">Accuracy</string>
    <string name="endurance_score_heading">Endurance</string>
    <string name="speed_score">Good</string>
    <string name="memory_content_description">Memory Game</string>
</resources>