<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SafeCrackerFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/circle"
        android:scaleType="centerInside"
        android:src="@drawable/safe_cracker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/pi_game"
        android:src="@drawable/safe_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/inputTextView"
        android:visibility="invisible"
        android:layout_width="3dp"
        android:layout_height="5dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/numSequence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/numSequence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0123456789" />

    <Button
        android:id="@+id/button1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="188dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_1"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="188dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_2"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="188dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_3"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="244dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_4"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="244dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_5"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="244dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_6"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="300dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_7"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="300dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_8"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="300dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_9"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="356dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_0"
        android:textColor="@drawable/illuminated_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="42dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/go"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/quitButton"
        app:layout_constraintStart_toEndOf="@+id/retryButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/secondaryLightColor"
        android:text="@string/retry_button"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/secondaryLightColor"
        android:text="@string/quit_button"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/score_label"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/userScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/user_score_safe"
            android:textColor="#FF0000"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="0" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/strikesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/strikes_label"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/userStrikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/user_strikes_safe"
            android:textColor="#FF0000"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="0" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>