<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="189dp"
        android:layout_height="82dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/pi_game"
        android:src="@drawable/music_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/MusicButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_button_2"
        app:backgroundTint="@color/musicButton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/MusicButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_button_4"
        app:backgroundTint="@color/musicButton4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/MusicButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_button_1"
        app:backgroundTint="@color/musicButton1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <Button
        android:id="@+id/MusicButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_button_3"
        app:backgroundTint="@color/musicButton3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="150dp"
        android:layout_height="190dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/score_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/userScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="0" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:id="@+id/strikesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/strikes_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/userStrikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="0" />

    </LinearLayout>

    <Button
        android:id="@+id/retryButtonMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/retry_button"
        android:textColor="@color/primaryDarkColor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MusicButton4"
        tools:ignore="TextContrastCheck"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/quitButtonMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/quit_button"
        android:textColor="@color/primaryDarkColor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MusicButton1"
        tools:ignore="TextContrastCheck"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>